# SiriusCpp

./: CMakeLists.txt  README.TXT  Task1-2.cpp  Task1-2.sln  Task1-2.vcxproj  Task1-2.vcxproj.filters  dot_checker.cpp  dot_checker.h  main.cpp  parse_arguments.cpp  parse_arguments.h  poly.txt  read_file.cpp  read_file.h  test.cpp
Task1-3/: CMakeLists.txt  dot_checker.cpp  dot_checker.h  main.cpp  parse_arguments.cpp  parse_arguments.h  poly.txt  read_file.cpp  read_file.h
Task4/: ArgErrorsHandler.cpp  ArgErrorsHandler.h  CMakeLists.txt  FindMinPath.cpp  FindMinPath.h  README.TXT  dex.cpp  dex.h  main.cpp
Task4/load_png/: lodepng.h
Task5/: CMakeLists.txt  README.TXT  elements.txt  list.cpp  list.h  main.cpp
Task6/: CMakeLists.txt  README.TXT  main.cpp  polynom.cpp  polynom.h
Task7/: CMakeLists.txt  README.TXT  main.cpp  matrix.cpp  matrix.h  test_b.txt  test_m.txt  test_res.txt  test_x0.txt
